syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.reproducer";

package hello;

service StreamSvc {
    rpc StringStream (stream StringRequest) returns (StringReply) {}
}

message StringRequest {
    string anyValue = 1;
}

message StringReply {
    string message = 1;
}
